# vision_and_localization

./: .gitignore  README.md  document  document.pub  requirements.txt  test.ipynb
camera_tuning/: README.md
camera_tuning/tuning_server/: .gitignore  local.sh  main.py  pyproject.toml
camera_tuning/tuning_server/providers/: calibration_provider.py  camera_provider.py
camera_tuning/tuning_server/routers/: calibrate_router.py  camera_router.py  capture_router.py  distance_router.py
camera_tuning/tuning_ui/: package-lock.json  package.json
camera_tuning/tuning_ui/src/: App.tsx
inference/: pyproject.toml
model_training/: data.yaml  train_yolo.py
testing/: detection.ipynb  find_camera.ipynb  localization.ipynb  requirements.txt  stream_video.py
testing/camera_calibration/: camera_calibration.ipynb  measure_distance.ipynb
testing/localization/: stream_video.py
testing/localization/camera_calibration/: camera_calibration.ipynb
vision_system/: config.py  main.py  pyproject.toml  test.ipynb
vision_system/data_types/: detection_types.py  position_types.py
vision_system/data_types/input_types/: camera_types.py  input_types.py
vision_system/data_types/output_types/: output_types.py
vision_system/input_managers/: camera_manager.py  motor_manager.py
vision_system/output_managers/: communication_manager.py
vision_system/processing/: object_distances.py
vision_system/tests/: camera_manager.test.py
vision_system/types/input_types/: camera_types.py  input_types.py  motor_types.py
vision_system/util/: camera_util.py
(+10 files in other folders)
